# discord-rpc

./: build.gradle
src/main/c/: CMakeLists.txt  net_arikia_dev_drpc_DiscordRPC.c  net_arikia_dev_drpc_DiscordRPC.h
src/main/java/net/arikia/dev/drpc/: DiscordEventHandlers.java  DiscordRPC.java  DiscordRichPresence.java  DiscordUser.java
src/main/java/net/arikia/dev/drpc/callbacks/: DisconnectedCallback.java  ErroredCallback.java  JoinGameCallback.java  JoinRequestCallback.java  ReadyCallback.java  SpectateGameCallback.java
